2008-03-05  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/faillog.c: Only reset the entries of existing users
	with faillog -r (not all numeric IDs starting from 0). Thanks to
	Peter Vrabec.

2008-03-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwunconv.c: Fix typo. One "can't open" message is a "can't
	lock".

2008-02-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: When a password is moved to the gshadow file, use
	"x" instead of "x" to indicate that the password is shadowed
	(consistency with grpconv).

2008-02-26  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Fix failures when the gshadow file is not present. Thanks
	to Christian Henz (http://bugs.debian.org/467488)
	* src/gpasswd.c (get_group): Do not fail if gshadow is not present. Just use
	the group file and set the grent structure
	* src/gpasswd.c (check_perms): The permissions should be checked
	using both the gshadow and group file. Add a <struct group *>
	parameter, and check if the gshadow file exists (is_shadowgrp).
	* src/gpasswd.c (main): Do not use sgent.sg_mem or sgent.sg_adm if
	the gshadow file is not present (sgent is not initialized in that
	case). The fields of sgent can be set, but not used.

2008-02-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Fix typo in comment.
	* src/gpasswd.c: Move comment regarding FIRST_MEMBER_IS_ADMIN to
	where it belongs.
	* src/gpasswd.c: Indicate the end of the #ifdef FIRST_MEMBER_IS_ADMIN
	section.

2008-02-25  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/Makefile.in.in: Use --previous when merging PO files of
	the manpages.

2008-02-25  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/SYS_UID_MAX.xml, man/login.defs.d/SYS_GID_MAX.xml:
	Document new variables.
	* man/newusers.8.xml, man/login.defs.5.xml,
	man/login.defs.d/GID_MAX.xml, man/login.defs.d/UID_MAX.xml: